@@ -49,6 +49,9 @@ Core and Builtins
 - Issue #15020: The program name used to search for Python's path is now
   "python3" under Unix, not "python".
 
+- Issue #15897: zipimport.c doesn't check return value of fseek().
+  Patch by Felipe Cruz.
+
 - Issue #15033: Fix the exit status bug when modules invoked using -m swith,
   return the proper failure return value (1). Patch contributed by Jeff Knupp.
 
